<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".vue.HomeActivity">

    <TextView
        android:id="@+id/txtTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:text="@string/txtTitre"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnUP"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_customized_form"
        android:text="@string/txtSignUp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Or"
        android:textSize="20dp"
        android:layout_marginStart="130dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnIN"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_customized_form"
        android:text="@string/txtSignIn"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>