<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:orientation="vertical"
    tools:context=".vue.Panier">

    <TextView
        android:id="@+id/txtTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtTitre"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/MainRetourMain"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:background="@drawable/button_customized_form"
        android:text="@string/txtMainRetour"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAcheter3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_customized_form"
        android:text="@string/txtLanceCommande"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="15dp">
        <TextView
            android:id="@+id/NamePanier1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PricePanier1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/NamePanier1"
            android:textColor="@color/green"
            android:textSize="25sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="15dp">
        <TextView
            android:id="@+id/NamePanier2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PricePanier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/NamePanier2"
            android:textColor="@color/green"
            android:textSize="25sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="15dp">
        <TextView
            android:id="@+id/NamePanier3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PricePanier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/NamePanier3"
            android:textColor="@color/green"
            android:textSize="25sp" />
    </RelativeLayout>
</LinearLayout>